# viewcounter

./: Makefile  README.md  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/apps/adverts/: urls.py
server/apps/adverts/admin/: __init__.py  advert.py  category.py  city.py
server/apps/adverts/models/: __init__.py  advert.py  category.py  city.py
server/apps/adverts/serializers/: __init__.py  advert.py  category.py  city.py
server/apps/adverts/services/: __init__.py  advert_viewcount.py
server/apps/adverts/views/: __init__.py  advert_list.py  advert_retrieve.py
server/config/: celery.py  urls.py
server/config/migrations/adverts/: 0001_initial.py
server/config/settings/: __init__.py  celery.py  installed_apps.py  settings.py
