[tool.poetry]
name = "viewcounter"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
Django = "3.2.2"
psycopg2-binary = "2.8.6"
dj-database-url = "0.5.0"
gunicorn = "20.1.0"
ipython = "7.22.0"
Pillow = "8.2.0"
djangorestframework = "3.11.1"
djangorestframework-simplejwt = "4.4.0"
redis = "3.5.3"
django-redis = "4.12.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.2"
isort = "5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
